Bread and burger

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_single.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_single.yml
@@ -87,4 +87,7 @@
       - FoodBreadMeatXenoSlice
       - FoodPieXenoSlice
       - FoodBakedCannabisBrownie
+      #SS220
+      - FoodBreadTomato
+      - FoodBreadTomatoSlice
     rareChance: 0.05
