--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_whole.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_whole.yml
@@ -60,4 +60,6 @@
       - FoodBreadMeatXeno
       - FoodPieXeno
       - FoodBakedCannabisBrownieBatch
+      #SS220
+      - FoodBreadTomato
     rareChance: 0.05
