--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_whole.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Food_Drinks/food_baked_whole.yml
@@ -60,6 +60,5 @@
       - FoodBreadMeatXeno
       - FoodPieXeno
       - FoodBakedCannabisBrownieBatch
-      #SS220
-      - FoodBreadTomato
+      - FoodBreadTomato #ss220 cooking
     rareChance: 0.05
