--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -322,29 +322,6 @@
     FoodBreadBun: 1
     MobMothroach: 1
 
-#SS220-Tomato-update begin
-- type: microwaveMealRecipe
-  id: RecipeTomatoburger
-  name: tomato burger recipe
-  result: FoodBurgerTomato
-  time: 10
-  solids:
-    FoodBreadBun: 1
-    FoodMeatTomato: 1
-
-- type: microwaveMealRecipe
-  id: RecipeAliveTomatoburger
-  name: alive tomato burger recipe
-  result: FoodBurgerTomatoAlive
-  time: 15
-  reagents:
-   EZNutrient: 5
-   Cognizine: 1
-  solids:
-    FoodBreadBun: 1
-    FoodMeatTomato: 2
-#SS220-Tomato-update end
-
 #Breads & Sandwiches
 
 - type: microwaveMealRecipe
@@ -441,17 +418,6 @@
     FoodDough: 1
     FoodMeatXenoCutlet: 2
     FoodCheeseSlice: 2
-
-#SS220-Tomato-update begin
-- type: microwaveMealRecipe
-  id: RecipeBreadTomato
-  name: tomatobread recipe
-  result: FoodBreadTomato
-  time: 15
-  solids:
-    FoodDough: 1
-    FoodMeatTomato: 2
-#SS220-Tomato-update end
 
 #Slices Only
 
@@ -746,7 +712,7 @@
 - type: microwaveMealRecipe
   id: RecipeMeatballSoup
   name: meatball soup recipe
-  result: FoodSoupMeatball
+  result: oodSoupMeatballF
   time: 10
   reagents:
     Water: 10
