animation + crazy burger

--- a/Resources/Prototypes/SS220/Recipes/Cooking/tomato.yml
+++ b/Resources/Prototypes/SS220/Recipes/Cooking/tomato.yml
@@ -21,6 +21,30 @@
     FoodBreadBun: 1
     FoodMeatTomato: 2
 
+- type: microwaveMealRecipe
+  id: RecipeCrazyTomatoburgerOne
+  name: crazy tomato burger mistake
+  result: MobBurgerTomatoAngry
+  time: 10
+  reagents:
+   Left4Zed: 1
+   Cognizine: 1
+  solids:
+    FoodBreadBun: 1
+    FoodMeatTomato: 2
+
+- type: microwaveMealRecipe
+  id: RecipeCrazyTomatoburgerTwo
+  name: crazy tomato burger mistake
+  result: MobBurgerTomatoAngry
+  time: 15
+  reagents:
+   Left4Zed: 1
+   Cognizine: 1
+  solids:
+    FoodBreadBun: 1
+    FoodMeatTomato: 1
+
 #Bread
 
 - type: microwaveMealRecipe
