--- a/Resources/Prototypes/Corvax/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/NPCs/pets.yml
@@ -4,6 +4,9 @@
   id: MobGorillaLargo
   description: Cargo's pet gorilla. He seems to have an 'I love Mom' tattoo.
   components:
+    - type: NpcFactionMember
+      factions:
+        - PetsNTPassive
     - type: Inventory
       speciesId: gorilla
       templateId: gorillaLargo
@@ -80,6 +83,9 @@
   id: MobGorillaAnatoly
   description: Питомец карго, участвовал в первой революции. Кажется, у него есть татуировка "Я люблю маму".
   components:
+    - type: NpcFactionMember
+      factions:
+        - PetsNTPassive
     - type: GhostRole
       makeSentient: true
       allowSpeech: true
